--- a/src/components/_banner.html
+++ b/src/components/_banner.html
@@ -14,7 +14,7 @@
                 </div>
 
                 <div class="banner__info-offer">
-                    <strong class="banner__info-offer-title h h_h2"> 100+ </strong>
+                    <strong class="banner__info-offer-title h h_h2"> 10 000+ </strong>
 
                     <p class="banner__info-offer-subtitle text__regular-16">товаров в каталоге</p>
                 </div>
