--- a/src/components/_map.html
+++ b/src/components/_map.html
@@ -48,7 +48,7 @@
                                 </div>
                             </div>
                             <div class="map-card__footer">
-                                <button class="map-card__button">
+                                <a href="tel:84951208155" class="map-card__button">
                                     <svg
                                         width="29"
                                         height="28"
@@ -76,45 +76,7 @@
                                         </g>
                                     </svg>
                                     <span>8 (495) 120-81-55</span>
-                                    <svg
-                                        width="29"
-                                        height="28"
-                                        viewBox="0 0 29 28"
-                                        fill="none"
-                                        xmlns="http://www.w3.org/2000/svg"
-                                        class="arrow"
-                                    >
-                                        <mask
-                                            id="mask0_3308_551"
-                                            style="mask-type: alpha"
-                                            maskUnits="userSpaceOnUse"
-                                            x="0"
-                                            y="0"
-                                            width="29"
-                                            height="28"
-                                        >
-                                            <rect x="0.5" width="28" height="28" fill="#D9D9D9" />
-                                        </mask>
-                                        <g mask="url(#mask0_3308_551)">
-                                            <path
-                                                d="M13.9401 16.5362L10.2638 12.8599C10.2131 12.8092 10.1731 12.7526 10.144 12.6901C10.1148 12.6275 10.1002 12.5605 10.1002 12.489C10.1002 12.3461 10.1486 12.2219 10.2452 12.1164C10.3419 12.011 10.4693 11.9583 10.6275 11.9583H18.3723C18.5304 11.9583 18.6578 12.0115 18.7545 12.1179C18.8512 12.2244 18.8995 12.3486 18.8995 12.4906C18.8995 12.5261 18.8449 12.6493 18.7357 12.8602L15.0596 16.5363C14.9751 16.6208 14.8878 16.6825 14.7976 16.7213C14.7073 16.7602 14.6081 16.7797 14.4999 16.7797C14.3916 16.7797 14.2924 16.7602 14.2022 16.7213C14.112 16.6825 14.0246 16.6207 13.9401 16.5362Z"
-                                                fill="#1D1D1B"
-                                            />
-                                        </g>
-                                    </svg>
-                                </button>
-                                <ul class="map-card__list">
-                                    <li>
-                                        <span>Оптовый отдел продаж:</span>
-                                        <a href="#">8 800 600 28 20</a>
-                                        <span>Пн - Пт: с 9:00 до 18:00 Сб, Вс: : выходные</span>
-                                    </li>
-                                    <li>
-                                        <span>Оптово-розничный магазин:</span>
-                                        <a href="#">8 800 600 28 20</a>
-                                        <span>Пн - Вс: с 8:00 до 18:30 Без выходных </span>
-                                    </li>
-                                </ul>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -277,7 +239,7 @@
                                 </div>
                             </div>
                             <div class="map-card__footer">
-                                <button class="map-card__button">
+                                <a href="tel:84951208155" class="map-card__button">
                                     <svg
                                         width="29"
                                         height="28"
@@ -305,45 +267,7 @@
                                         </g>
                                     </svg>
                                     <span>8 (495) 120-81-55</span>
-                                    <svg
-                                        width="29"
-                                        height="28"
-                                        viewBox="0 0 29 28"
-                                        fill="none"
-                                        xmlns="http://www.w3.org/2000/svg"
-                                        class="arrow"
-                                    >
-                                        <mask
-                                            id="mask0_3308_551"
-                                            style="mask-type: alpha"
-                                            maskUnits="userSpaceOnUse"
-                                            x="0"
-                                            y="0"
-                                            width="29"
-                                            height="28"
-                                        >
-                                            <rect x="0.5" width="28" height="28" fill="#D9D9D9" />
-                                        </mask>
-                                        <g mask="url(#mask0_3308_551)">
-                                            <path
-                                                d="M13.9401 16.5362L10.2638 12.8599C10.2131 12.8092 10.1731 12.7526 10.144 12.6901C10.1148 12.6275 10.1002 12.5605 10.1002 12.489C10.1002 12.3461 10.1486 12.2219 10.2452 12.1164C10.3419 12.011 10.4693 11.9583 10.6275 11.9583H18.3723C18.5304 11.9583 18.6578 12.0115 18.7545 12.1179C18.8512 12.2244 18.8995 12.3486 18.8995 12.4906C18.8995 12.5261 18.8449 12.6493 18.7357 12.8602L15.0596 16.5363C14.9751 16.6208 14.8878 16.6825 14.7976 16.7213C14.7073 16.7602 14.6081 16.7797 14.4999 16.7797C14.3916 16.7797 14.2924 16.7602 14.2022 16.7213C14.112 16.6825 14.0246 16.6207 13.9401 16.5362Z"
-                                                fill="#1D1D1B"
-                                            />
-                                        </g>
-                                    </svg>
-                                </button>
-                                <ul class="map-card__list last">
-                                    <li>
-                                        <span>Оптовый отдел продаж:</span>
-                                        <a href="#">8 800 600 28 20</a>
-                                        <span>Пн - Пт: с 9:00 до 18:00 Сб, Вс: : выходные</span>
-                                    </li>
-                                    <li>
-                                        <span>Оптово-розничный магазин:</span>
-                                        <a href="#">8 800 600 28 20</a>
-                                        <span>Пн - Вс: с 8:00 до 18:30 Без выходных </span>
-                                    </li>
-                                </ul>
+                                </a>
                             </div>
                         </div>
                     </div>
