--- a/src/components/_recommendations.html
+++ b/src/components/_recommendations.html
@@ -90,6 +90,10 @@
                                     src="./assets/images/sections/recommendations/recommendations-image-1.png"
                                     alt=""
                                 />
+                                <img src="./assets/images/sections/receipts/receipts-image-1.webp" alt="" />
+                                <img src="./assets/images/sections/receipts/receipts-image-2.webp" alt="" />
+                                <img src="./assets/images/sections/receipts/receipts-image-3.webp" alt="" />
+                                <span class="recommendations__card-row"></span>
                             </figure>
 
                             <p class="recommendations__card-title text__regular-18">
@@ -163,6 +167,10 @@
                                     src="./assets/images/sections/recommendations/recommendations-image-1.png"
                                     alt=""
                                 />
+                                <img src="./assets/images/sections/receipts/receipts-image-3.webp" alt="" />
+                                <img src="./assets/images/sections/receipts/receipts-image-1.webp" alt="" />
+                                <img src="./assets/images/sections/receipts/receipts-image-2.webp" alt="" />
+                                <span class="recommendations__card-row"></span>
                             </figure>
 
                             <p class="recommendations__card-title text__regular-18">
@@ -236,6 +244,10 @@
                                     src="./assets/images/sections/recommendations/recommendations-image-1.png"
                                     alt=""
                                 />
+                                <img src="./assets/images/sections/receipts/receipts-image-1.webp" alt="" />
+                                <img src="./assets/images/sections/receipts/receipts-image-2.webp" alt="" />
+                                <img src="./assets/images/sections/receipts/receipts-image-3.webp" alt="" />
+                                <span class="recommendations__card-row"></span>
                             </figure>
 
                             <p class="recommendations__card-title text__regular-18">
@@ -309,6 +321,10 @@
                                     src="./assets/images/sections/recommendations/recommendations-image-1.png"
                                     alt=""
                                 />
+                                <img src="./assets/images/sections/receipts/receipts-image-3.webp" alt="" />
+                                <img src="./assets/images/sections/receipts/receipts-image-1.webp" alt="" />
+                                <img src="./assets/images/sections/receipts/receipts-image-2.webp" alt="" />
+                                <span class="recommendations__card-row"></span>
                             </figure>
 
                             <p class="recommendations__card-title text__regular-18">
@@ -382,6 +398,10 @@
                                     src="./assets/images/sections/recommendations/recommendations-image-1.png"
                                     alt=""
                                 />
+                                <img src="./assets/images/sections/receipts/receipts-image-1.webp" alt="" />
+                                <img src="./assets/images/sections/receipts/receipts-image-2.webp" alt="" />
+                                <img src="./assets/images/sections/receipts/receipts-image-3.webp" alt="" />
+                                <span class="recommendations__card-row"></span>
                             </figure>
 
                             <p class="recommendations__card-title text__regular-18">
