--- a/src/components/sale.html
+++ b/src/components/sale.html
@@ -175,6 +175,48 @@
                         </div>
                     </div>
                 </a>
+                <a href="#" class="sale-card swiper-slide">
+                    <div class="sale-card__content">
+                        <div class="sale-card__percent">-15% <span></span></div>
+                        <div class="sale-card__date">до 13.12.2023</div>
+                        <div class="sale-card__text">Подарочные пакеты со скидками до -15%</div>
+                        <div class="sale-card__image">
+                            <img src="./assets/images/sale/card-2.png" alt="" />
+                        </div>
+                    </div>
+                </a>
+                <a href="#" class="sale-card swiper-slide">
+                    <div class="sale-card__content">
+                        <div class="sale-card__percent">-8% <span></span></div>
+                        <div class="sale-card__date">до 13.12.2023</div>
+                        <div class="sale-card__text">
+                            «Ваза в каждый дом» — скидки 8% на весь ассортименте
+                        </div>
+                        <div class="sale-card__image">
+                            <img src="./assets/images/sale/card-1.png" alt="" />
+                        </div>
+                    </div>
+                </a>
+                <a href="#" class="sale-card swiper-slide">
+                    <div class="sale-card__content">
+                        <div class="sale-card__percent">-34% <span></span></div>
+                        <div class="sale-card__date">до 13.12.2023</div>
+                        <div class="sale-card__text">Тотальная распродажа новогодней коллекции 2024</div>
+                        <div class="sale-card__image">
+                            <img src="../assets/images/sale/card-3.png" alt="" />
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="sale__pagination">
+                <div
+                    class="sale__pagination-bullets swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-horizontal"
+                >
+                    <span class="swiper-pagination-bullet swiper-pagination-bullet-active"></span
+                    ><span class="swiper-pagination-bullet"></span
+                    ><span class="swiper-pagination-bullet"></span
+                    ><span class="swiper-pagination-bullet"></span>
+                </div>
             </div>
         </div>
         <a href="#" class="sale__link link">
