--- a/src/ui/styles/_news-card.scss
+++ b/src/ui/styles/_news-card.scss
@@ -1,10 +1,4 @@
 .news {
-    &__slider {
-        @media (min-width: 48em) {
-            height: 69rem;
-        }
-    }
-
     &__card {
         position: relative;
         padding: 3.2rem;
@@ -16,7 +10,6 @@
         min-height: 50rem;
 
         transition:
-            min-height 0.5s ease,
             background-color 0.5s ease,
             border-radius 0.5s ease;
 
@@ -37,7 +30,10 @@
             &:hover {
                 background-color: $light-green;
                 border-radius: 3rem 22rem 3rem 3rem;
-                min-height: 69rem;
+
+                .news__card-publication-icon {
+                    opacity: 0;
+                }
 
                 .popular__btn-arrow {
                     opacity: 1;
@@ -92,6 +88,10 @@
             justify-content: space-between;
             margin-bottom: 0.6rem;
             gap: 1rem;
+
+            &-icon {
+                transition: opacity 0.5s ease;
+            }
 
             @include small-tablet {
                 margin-bottom: 3.2rem;
