--- a/src/ui/styles/_recommendations-card.scss
+++ b/src/ui/styles/_recommendations-card.scss
@@ -9,6 +9,92 @@
         height: 100%;
         position: relative;
 
+        &-row {
+            position: absolute;
+            top: 0;
+            left: 0;
+
+            display: flex;
+            width: 100%;
+            height: 100%;
+
+            .slide-hover-pag {
+                flex: 1 1 auto;
+            }
+        }
+
+        &-image {
+            position: relative;
+
+            @media (any-hover: hover) {
+                &:hover {
+                    .slide-hover-pag-bullets {
+                        opacity: 1;
+                        visibility: visible;
+                    }
+                }
+            }
+
+            img {
+                position: absolute;
+                top: 0;
+                left: 0;
+                display: none;
+                &._is-active {
+                    display: block;
+                }
+            }
+
+            .slide-hover-pag-bullets {
+                position: absolute;
+                left: 50%;
+                bottom: 1rem;
+
+                display: flex;
+                justify-content: center;
+                column-gap: 0.4rem;
+
+                opacity: 0;
+                visibility: hidden;
+                transform: translateX(-50%);
+
+                transition:
+                    opacity 0.3s ease,
+                    visibility 0.3s ease;
+            }
+
+            .slide-hover-pag-bullet {
+                width: 0.8rem;
+                height: 0.8rem;
+                border-radius: 50%;
+                opacity: 1;
+                border: 1px solid $green;
+                transition: background-color 0.3s ease;
+
+                &._is-active {
+                    background-color: rgb(43, 86, 68);
+                }
+            }
+        }
+
+        .btn__card {
+            transition: background-color 0.5s ease;
+
+            span {
+                transition: color 0.5s ease;
+            }
+
+            @media (any-hover: hover) {
+                &:hover {
+                    background-color: $green;
+
+                    span {
+                        color: $white;
+                    }
+                }
+            }
+        }
+
         @include small-tablet {
             padding: 3.2rem;
             border-radius: 4.8rem;
@@ -441,6 +527,9 @@
 
         &-title {
             margin-bottom: 0.8rem;
+
+            transition: text-shadow 0.5s ease;
+
             @include clamp-text(2);
 
             @include small-tablet {
@@ -449,11 +538,22 @@
                 font-size: 3rem;
                 line-height: 130%;
             }
+
+            @media (any-hover: hover) {
+                &:hover {
+                    text-shadow:
+                        -0.005rem -0.005rem 0 rgba(29, 29, 27, 0.3),
+                        0.005rem -0.005rem 0 rgba(29, 29, 27, 0.3),
+                        -0.005rem 0.005rem 0 rgba(29, 29, 27, 0.3),
+                        0.005rem 0.005rem 0 rgba(29, 29, 27, 0.3);
+                }
+            }
         }
 
         &-articul {
             display: block;
             margin-bottom: 2rem;
+            color: #898485;
 
             @include small-tablet {
                 font-weight: 400;
