--- a/src/scss/sections/_sale.scss
+++ b/src/scss/sections/_sale.scss
@@ -41,6 +41,9 @@
                     opacity: 1;
                     visibility: visible;
                 }
+                .swiper-pagination-bullet {
+                    background-color: rgb(224, 223, 223);
+                }
             }
         }
 
