--- a/src/components/_card.html
+++ b/src/components/_card.html
@@ -245,7 +245,7 @@
                             </div>
                             <div class="card__retail-attention" data-showmore>
                                 <div class="card__retail-attention-text">Закажите на сумму от 15 000₽,
-                                    чтобы прошла скидка 5%</div>
+                                    чтобы получить скидку 5%</div>
                                 <button class="card__retail-attention-btn" data-showmore-button>
                                     <div class="text__regular-16">
                                         <span>Подробнее</span>
