--- a/src/components/_shipping.html
+++ b/src/components/_shipping.html
@@ -12,37 +12,23 @@
                     <a href="../catalog.html" type="button" class="tabs__title _is-active">
                         <span class="nav-link-sidebar-account__icon-wrap">
                             <svg
+                                xmlns="http://www.w3.org/2000/svg"
                                 width="24"
                                 height="24"
                                 viewBox="0 0 24 24"
                                 fill="none"
-                                xmlns="http://www.w3.org/2000/svg"
                             >
                                 <path
-                                    d="M12.003 12.5481C12.0005 12.5488 11.9986 12.5493 11.997 12.5496L3.17272 7.43653C3.17304 7.43663 3.1738 7.43693 3.17511 7.43769L3.17511 7.43769L3.17736 7.439L11.6274 12.329L12.003 12.5464L12.3786 12.329L20.7786 7.46904L20.7787 7.46896C20.7791 7.46902 20.7794 7.4691 20.7798 7.46921C20.7807 7.46945 20.7816 7.46975 20.7824 7.47009C20.7818 7.47149 20.781 7.47278 20.7802 7.47384C20.7795 7.47486 20.7788 7.47554 20.7781 7.47605L12.0519 12.5307C12.0293 12.5401 12.0134 12.5454 12.003 12.5481Z"
-                                    fill="white"
-                                    stroke="white"
-                                    stroke-width="1.5"
+                                    d="M12.0001 13.3C11.8701 13.3 11.7401 13.27 11.6201 13.2L2.79008 8.08998C2.44008 7.87998 2.31008 7.41998 2.52008 7.05998C2.73008 6.69998 3.19008 6.57998 3.55008 6.78998L12.0001 11.68L20.4001 6.81998C20.7601 6.60998 21.2201 6.73998 21.4301 7.08998C21.6401 7.44998 21.5101 7.90998 21.1601 8.11998L12.3901 13.2C12.2601 13.26 12.1301 13.3 12.0001 13.3Z"
+                                    fill="#292D32"
                                 />
-                                <mask id="path-2-inside-1_4369_18502" fill="white">
-                                    <path
-                                        d="M12 22.36C11.59 22.36 11.25 22.02 11.25 21.61V12.54C11.25 12.13 11.59 11.79 12 11.79C12.41 11.79 12.75 12.13 12.75 12.54V21.61C12.75 22.02 12.41 22.36 12 22.36Z"
-                                    />
-                                </mask>
                                 <path
                                     d="M12 22.36C11.59 22.36 11.25 22.02 11.25 21.61V12.54C11.25 12.13 11.59 11.79 12 11.79C12.41 11.79 12.75 12.13 12.75 12.54V21.61C12.75 22.02 12.41 22.36 12 22.36Z"
-                                    fill="white"
+                                    fill="#292D32"
                                 />
                                 <path
-                                    d="M12 20.86C12.4184 20.86 12.75 21.1916 12.75 21.61H9.75C9.75 22.8485 10.7616 23.86 12 23.86V20.86ZM12.75 21.61V12.54H9.75V21.61H12.75ZM12.75 12.54C12.75 12.9585 12.4184 13.29 12 13.29V10.29C10.7616 10.29 9.75 11.3016 9.75 12.54H12.75ZM12 13.29C11.5816 13.29 11.25 12.9585 11.25 12.54H14.25C14.25 11.3016 13.2384 10.29 12 10.29V13.29ZM11.25 12.54V21.61H14.25V12.54H11.25ZM11.25 21.61C11.25 21.1916 11.5816 20.86 12 20.86V23.86C13.2384 23.86 14.25 22.8485 14.25 21.61H11.25Z"
-                                    fill="white"
-                                    mask="url(#path-2-inside-1_4369_18502)"
-                                />
-                                <path
-                                    d="M12.0006 2C12.1331 2 12.2646 2.00492 12.3943 2.01458C12.2629 2.00483 12.1313 2 12.0006 2ZM12.0006 2C11.2533 2 10.538 2.15658 9.99607 2.43744C10.5835 2.13584 11.3075 2 12.0006 2ZM3.03925 16.9504C3.40937 17.5793 3.93441 18.1776 4.54848 18.534C3.97857 18.2093 3.4368 17.6446 3.03367 16.9578C2.62252 16.2574 2.39062 15.4897 2.39062 14.82C2.39063 15.5436 2.66242 16.3101 3.03925 16.9504ZM19.4149 18.5652L14.2808 21.4111L19.4152 18.5555L19.4183 18.5537C20.046 18.2006 20.5839 17.5952 20.9616 16.9548C21.3392 16.3146 21.6106 15.548 21.6106 14.82V14.83C21.6106 15.4994 21.3789 16.2644 20.9678 16.9636C20.557 17.6623 20.0011 18.2375 19.4159 18.5646C19.4156 18.5648 19.4152 18.565 19.4149 18.5652ZM9.72059 2.58885L4.58814 5.44342C4.58776 5.44362 4.58739 5.44383 4.58701 5.44404C3.95527 5.79318 3.41656 6.40113 3.03962 7.04023C2.66239 7.67982 2.39063 8.44648 2.39062 9.17C2.39062 8.50058 2.62232 7.73556 3.0334 7.03638C3.44422 6.33766 4.00021 5.76252 4.58538 5.43533C4.58572 5.43514 4.58605 5.43495 4.58639 5.43476L9.72059 2.58885ZM20.962 7.03961C20.7804 6.73107 20.5616 6.42991 20.3132 6.16105C20.5546 6.41903 20.7766 6.71692 20.9676 7.04218C21.1932 7.4266 21.3649 7.83128 21.4739 8.22892C21.3582 7.81232 21.1773 7.40538 20.962 7.03961Z"
-                                    fill="white"
-                                    stroke="white"
-                                    stroke-width="1.5"
+                                    d="M11.9996 22.75C11.1196 22.75 10.2496 22.56 9.55965 22.18L4.21965 19.21C2.76965 18.41 1.63965 16.48 1.63965 14.82V9.17C1.63965 7.51 2.76965 5.59 4.21965 4.78L9.55965 1.82C10.9296 1.06 13.0696 1.06 14.4396 1.82L19.7796 4.79C21.2297 5.59 22.3596 7.52 22.3596 9.18V14.83C22.3596 16.49 21.2297 18.41 19.7796 19.22L14.4396 22.18C13.7496 22.56 12.8796 22.75 11.9996 22.75ZM11.9996 2.75C11.3696 2.75 10.7496 2.88 10.2896 3.13L4.94965 6.1C3.98965 6.63 3.13965 8.07 3.13965 9.17V14.82C3.13965 15.92 3.98965 17.36 4.94965 17.9L10.2896 20.87C11.1996 21.38 12.7996 21.38 13.7096 20.87L19.0496 17.9C20.0096 17.36 20.8596 15.93 20.8596 14.82V9.17C20.8596 8.07 20.0096 6.63 19.0496 6.09L13.7096 3.12C13.2496 2.88 12.6296 2.75 11.9996 2.75Z"
+                                    fill="#292D32"
                                 />
                             </svg>
                         </span>
@@ -94,7 +80,7 @@
                     <div class="payment__tabs-banner">
                         <div class="payment__tabs-banner-content">
                             <figure class="payment__tabs-banner-image">
-                                <img src="./assets/images/sections/payment/banner-image.png" alt="">
+                                <img src="./assets/images/sections/payment/banner-image.png" alt="" />
                             </figure>
                         </div>
                     </div>
