--- a/src/ui/styles/_recommendations-card.scss
+++ b/src/ui/styles/_recommendations-card.scss
@@ -47,7 +47,7 @@
 
             .slide-hover-pag-bullets {
                 position: absolute;
-                left: 50%;
+                right: 2rem;
                 bottom: 1rem;
 
                 display: flex;
@@ -56,7 +56,6 @@
 
                 opacity: 0;
                 visibility: hidden;
-                transform: translateX(-50%);
 
                 transition:
                     opacity 0.3s ease,
